# SKA_photo_downloader

./: clear_folder_from_old_files.py  compare_with_saved_data.py  crome_options.py  exif_job.py  file_name_from_link.py  image_downloader.py  images_in_folder.py  main.py  main_download_fresh_images.py  metadata-cleaner.py  pyproject.toml  requirements.txt  send_photo_tg.py  write_album_name_to_file.py
oop_style/: Dockerfile  chrome_driver.py  main_ska_oop.py
tests/: downloader-tests.py  test_clear_folder_from_old_files.py  test_extract_file_name.py
tools/: crome_options.py  exif_job.py  image_downloader.py  images_in_folder.py  metadata-cleaner.py  send_message_to_telegram.py  send_photo_tg.py  write_album_name_to_file.py
